themes MDL-20204 removed the css prevent the browsers horizontal scrollbar from appearing

--- a/theme/base/style/pagelayout.css
+++ b/theme/base/style/pagelayout.css
@@ -28,7 +28,7 @@
  ****/
 
 body {margin:auto 0px;width:auto;}
-#page {width:100%;overflow:hidden;}
+#page {width:100%;}
 #page-header {float:left;width:100%;}
 #page-content {clear:both;float:left;overflow:hidden;position:relative;width:100%;min-width:900px;}
 #page-content #region-main-box {float:left;left:200px;position:relative;width:200%;}
